--- a/elements/pf-label-group/demo/pf-label-group.html
+++ b/elements/pf-label-group/demo/pf-label-group.html
@@ -1,7 +1,31 @@
-<pf-label-group></pf-label-group>
+<pf-label-group closeable num-labels="3"  add-label-mode="customForm" > 
+   <h2 slot="category">label groupppppppppppppp very very long</h2>
+  <pf-label  icon="info-circle" removable>Am</pf-label>
+ <pf-label  icon="info-circle" removable>Israel</pf-label>
+ <pf-label  icon="info-circle" removable>Hai</pf-label>
+ <pf-label  icon="info-circle" removable>Gold icon</pf-label>
+ <pf-label  icon="info-circle" removable>Gold icon2</pf-label>
+</pf-label-group>
+
+
+
 
 <script type="module">
   import '@patternfly/elements/pf-label-group/pf-label-group.js';
+  import '@patternfly/elements/pf-modal/pf-modal.js';
+  import '@patternfly/elements/pf-dropdown/pf-dropdown.js';
+
+
+
+  import '@patternfly/elements/pf-button/pf-button.js';
+
+  const container = document.querySelector('pf-label-group');
+  container.addEventListener('close', function(event) {
+    event.target.remove();
+  });
+   
+ 
+
 </script>
 
 <style>
@@ -9,4 +33,3 @@ pf-label-group {
   /* insert demo styles */
 }
 </style>
-
